@@ -16,6 +16,7 @@ the first or last character of the file was punctuation.<br>
 - Fixed NullPointerException appearing in system log when viewing a .form file.<br>
 - Fixed extraneous characters getting added to a register during recording.<br>
 - Use file type's indent size instead of tab size for indenting text.<br>
+- Restore caret if plugin is disabled.<br>
 ]]>
     </change-notes>
     <idea-version since-build="1162"/>
